--- a/N1语法.md
+++ b/N1语法.md
@@ -246,5 +246,41 @@
 　　　2.工業汚水を川に流すべからず。
 　　　3.山にごみを捨てるべからず。
 　　　4.野生動物出没、この先入るべからず。
+　　　5.関係者以外立ち入るべからず。
+　　　6.初心忘るべからず。
 ![bekarazu](https://nihongonosensei.net/pic/21042907.jpg)
+***
+## [～べからざる](https://nihongonosensei.net/?p=9221)
+### 意味：
+　　　～べからずと同じ意味。
+　　　会話では使わない。
+　　　古い本でよくみられる。
+　　　読んで意味だけ分かればいい。
+### 接続：
+　　　～べからずと同じ接続
+### 例文：
+　　　1.横領は社会人としては許すべからざる犯罪である。
+　　　2.戦争は、どんな理由があっても許すべからざる国際的犯罪である。
+　　　3.天空の城ラピュタは世界のアニメでは欠くべからざる名作である。
+　　　4.七人の侍は世界映画の歴史を語るうえで書くべからざる作品である。
+　　　5.神様は各信者にとっては欠くべからざる存在である。
+　　　6.昨日、社長に対して言うべからざることを言ってしまったから、今日はくびだろう。
+***
+## [~ではあるまいし/じゃあるまいし](https://nihongonosensei.net/?p=9945)
+### 意味：
+　　　～ではないのだから。
+　　　注意やアドバイスをするときよく使う。
+　　　目上の人には使えない。
+### 接続：
+　　　名詞＋ではあるまいし
+　　　Vる＋わけ/の/ん+ではあるまいし
+　　　Vた＋わけ/の/ん+ではあるまいし
+### 例文：
+　　　1.子供ではあるまいし、そんな馬鹿なことをするな。
+　　　2.大学生ではあるまいし、電話対応が下手すぎるわ。
+　　　3.新入社員でもあるまいし、どうしてこんな初歩的なミスをやるの？
+　　　4.子供じゃあるまいし、社内で先輩を見たら挨拶するのは当たり前でしょう？
+　　　5.ここは東京じゃあるまいし、24時間営業のレストランはないんだよ。
+　　　6.20代ではあるまいし、こんな肉体労働はできるまい。
+![ではあるまいし](https://nihongonosensei.net/pic/I1_040.jpg)
 ***
