--- a/N1语法.md
+++ b/N1语法.md
@@ -283,4 +283,36 @@
 　　　5.ここは東京じゃあるまいし、24時間営業のレストランはないんだよ。
 　　　6.20代ではあるまいし、こんな肉体労働はできるまい。
 ![ではあるまいし](https://nihongonosensei.net/pic/I1_040.jpg)
+
+***
+## [AべくしてＢする](https://nihongonosensei.net/?p=9320)
+### 意味：
+　　　Aになるのは当然だからＢする。
+　　　AとＢが同じ場合が多い。古い書き言葉。
+　　　「AなるべくＢした」をよく使う。
+### 接続：
+　　　Ⅴる＋べくして
+### 例文：
+　　　1.全然勉強してないからＮ1に落ちるべくして落ちた。
+　　　2.あんな高いところから飛び降りたから死ぬべくして死んだよ。
+　　　3.論点もわからず討論に参加したわけだから、相手に攻められるべくして攻められた。
+　　　4.ここには交通標識一つもなかったから、今回の事故はおこるべくして起こった事件であった。
+　　　5.あなたとは結婚すべくして結婚した。
+　　　6.いつも勝ち組は成功するべくして成功してるように見える。
+　　　7.練習不足だから、試合に負けるべくして負けた。
+　　　8.私たちは付き合うべくして付き合ってるわけですよ。
+***
+## [~べくもない](https://nihongonosensei.net/?p=9322)
+### 意味：
+　　　同然～だから、～しなくてもよい。
+### 接続：
+　　　Vる＋べくもない
+　　　するべくもない/すべくもない
+　　　※望む、比べる、疑うなどとよく使われる。
+### 例文：
+　　　1.アップルがうちより大きい会社ということは、比べるべくもない。
+　　　2.アメリカが韓国より広いことは比べるべくもない。
+　　　3.新宿はラーメン激戦区だから、今からラーメンで成功するのは極めて難しいことは疑うべくもない。
+　　　4.主力メンバーが5人も抜けているから、勝つことは望むべくもない。
+　　　5.これ以上の給料は望むべくもないのに、どうしてほかの大手企業の面接に行きたがってるかわかんない。
 ***
